--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.32.0
-pandas==2.1.3
+streamlit==1.29.0
+pandas==2.1.4
 numpy==1.26.2
-scikit-learn==1.5.0
+scikit-learn==1.3.2
 matplotlib==3.8.2
 seaborn==0.13.0
+requests==2.31.0
