--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-matplotlib==3.7.2
-seaborn==0.12.2
-streamlit==1.28.0
+pandas>=1.3.0,<2.1.0
+numpy>=1.21.0,<1.25.0
+scikit-learn>=1.0.0,<1.4.0
+matplotlib>=3.5.0,<3.9.0
+seaborn>=0.12.0,<0.14.0
+streamlit>=1.20.0,<1.32.0
