--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.32.0
-pandas==2.0.3
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
-scikit-learn==1.3.1
-scipy==1.11.2
-joblib==1.3.2
+streamlit
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+scipy
+joblib
